# programming-in-haskell

./: README.md  programming-in-haskell.cabal
app/: MainExcs10.hs  MainExcs10Adder.hs  MainExcs10GameOfLife.hs  MainExcs10nim.hs  MainExcs11.hs  MainExcs13.hs  MainExcs9.hs
chapters/: Excs1.hs  Excs12.hs  Excs13.hs  Excs14.hs  Excs15.hs  Excs2.hs  Excs3.hs  Excs4.hs  Excs5.hs  Excs6.hs  Excs7.hs  Excs8.hs  Excs9.hs
console/: Lib.hs
test/: Excs1Spec.hs  Excs2Spec.hs
