cabal-version:      2.4
name:               programming-in-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kczulko
maintainer:         karol.czulkowski@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

-- Common block
common shared-properties
  default-language: Haskell2010
  build-depends:
    base, mtl
  ghc-options:
    -Wall
                    
executable programming-in-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010


library chapters
  exposed-modules:
      Excs1, Excs2, Excs3, Excs4, Excs5, Excs6, Excs7, Excs8, Excs9
  hs-source-dirs:
      chapters
  ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans
  build-depends:
      base
  default-language: Haskell2010

test-suite spec
  import: shared-properties
  type: exitcode-stdio-1.0
  other-modules: Excs1Spec Excs2Spec SpecHelper
  hs-source-dirs: test
  main-is: Spec.hs
  build-tool-depends: hspec-discover:hspec-discover
  build-depends: hspec
               , chapter1
               , chapter2
               , chapter3
               , chapter4
  default-language:    Haskell2010